--- a/teja-front-end/src/login/SignupPage.css
+++ b/teja-front-end/src/login/SignupPage.css
@@ -1,8 +1,8 @@
 
 .Main-container {
-  height: 100%;
+  /* height: fit-content; */
     width: 100%;
-
+    /* height: fit-content; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,34 +13,33 @@
   }
   
   .box {
-    padding: 2rem;
+    padding: rem;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     width: 400px;
 
-    /* background: linear-gradient(135deg,  rgb(255, 255, 255), hsl(211, 100%, 85%)); */
   }
 
   
   h2 {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
   }
   
   .input-itm {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.1rem;
   }
   
   .input-itm label {
     display: block;
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.1rem;
   }
   
   .input-itm input {
     width: 100%;
-    padding: 0.5rem;
+    padding: 0rem;
     border: 1px solid rgb(204, 204, 204);
     border-radius: 4px;
   }
